@@ -43,7 +43,7 @@ syslogd provides:
 </ul>
 <p>
 <i>socklog</i> provides the first two features with the help of
-<a href="http://cr.yp.to/daemontools.html">daemontools</a>`
+<a href="http://cr.yp.to/daemontools.html">daemontools</a>'
 <a href="http://cr.yp.to/daemontools/svscan.html">svscan</a>,
 <a href="http://cr.yp.to/daemontools/supervise.html">supervise</a>
 and <a href="http://cr.yp.to/daemontools/multilog.html">multilog</a>,
@@ -58,8 +58,9 @@ so there is no need for any cron jobs or similar to rotate the logs.
 Log partitions can be calculated properly.
 <p>
 <i>socklog</i> runs on Linux, glibc 2.1.0 or higher, or dietlibc, OpenBSD,
-and FreeBSD. <i>socklog</i> reportedly runs on Solaris. If it runs for you
-on any other operating systems, please let me know.
+and FreeBSD. <i>socklog</i> reportedly runs on Solaris and NetBSD. If it
+runs for you on any other operating systems, please
+<a href="mailto:pape-socklog@smarden.org">let me know</a>.
 <p>
 <i>socklog</i> is small, secure, reliable.
 <hr>
